// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements OperationsElement should refract to semantic ApiDOM tree 1`] = `
(OperationsElement
  (MemberElement
    (StringElement)
    (OperationElement))
  (MemberElement
    (StringElement)
    (OperationElement)))
`;

exports[`refractor elements given field is of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationsElement
  (MemberElement
    (StringElement)
    (OperationElement))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;
